--- a/generator/templates/generator/home.html
+++ b/generator/templates/generator/home.html
@@ -33,6 +33,6 @@
     </form>
 
     <br>
-    <a href="{% url 'about' %}" class="btn btn-warning">About</a>
+    <a href="{% url 'about' %}" class="btn btn-info">About</a>
 
 </div>
