--- a/generator/templates/generator/password.html
+++ b/generator/templates/generator/password.html
@@ -4,8 +4,8 @@
     <h1>Your password is: </h1>
     <h2 class="alert alert-success">{{ password }}</h2>
 
-    <a href="{% url 'home' %}" class="btn btn-warning">Home</a>
+    <a href="{% url 'home' %}" class="btn btn-info">Home</a>
     <br>
     <br>
-    <a href="{% url 'about' %}" class="btn btn-warning">About</a>
+    <a href="{% url 'about' %}" class="btn btn-info">About</a>
 </div>
